<resources>
    <string name="app_name">appPokemon_Christian_Arias</string>
    <string name="bienvenido">Bienvenido, en esta app elegirás un pokemon y tendrás tu primer combate pokemon.Buena suerte!!</string>
    <string name="boton_Comenzar">Empezar</string>
    <string name="instrucciones">Toca la pokeball para ver el pokemon que hay dentro y elige tu compañero para el combate</string>
    <string name="charmander">Charmander</string>
    <string name="bulbasur">Bulbasur</string>
    <string name="squirtle">Squirtle</string>
    <string name="comenzarcombate">Comenzar Combate</string>
    <string name="Si">Si</string>
    <string name="No">No</string>
    <string name="mensajeShiny">"Es shiny!!!"</string>
    <string name="ataqueNormal">ATAQUE NORMAL -- </string>
    <string name="ataquePotente">ATAQUE POTENTE -- </string>
    <string name="ataqueRapido">ATAQUE RAPIDO -- </string>
    <string name="preguntaEleccion">¿Quieres elegir a </string>
    <string name="mensajeFallo"> ha fallado</string>
    <string name="ponerMote">"¿Quieres poner un mote a tu pokemon?"</string>
    <string name="placaje">Placaje</string>
    <string name="ascuas">Ascuas</string>
    <string name="burbuja">Burbuja</string>
    <string name="latigocepa">Latigo cepa</string>
    <string name="araniazo">Arañazo</string>
    <string name="power">Power</string>
    <string name="speed">Speed</string>
    <string name="registro">Registro</string>
    <string name="ataque_1">Ataque 1</string>
    <string name="ataque_3">Ataque 3</string>
    <string name="ataque_2">Ataque 2</string>
    <string name="ataque_4">Ataque 4</string>
    <string name="reset">Reset</string>
    <string name="campo_de_batalla">Campo de Batalla Back Ground</string>
    <string name="pokemon_rival">Pokemon Rival gif </string>
    <string name="mi_pokemon">Mi Pokemon gif </string>
    <string name="imagen_de_pokeball">imagen de pokeball</string>
    <string name="imagen_profesor_oak">Imagen profesor Oak</string>
    <string name="nombre_ataque">Nombre Ataque</string>
    <string name="fuego">fuego</string>
    <string name="normal">normal</string>
    <string name="planta">planta</string>
    <string name="agua">agua</string>
    <string name="nombre_tipo">nombre Tipo</string>
    <string name="madeReset"> ---- Se ha hecho reset ---- </string>
    <string name="finBatalla"> ---- Fin de la Batalla ---- </string>
    <string name="mote">Mote</string>
    <string name="salir">Salir</string>
</resources>