<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fontFamily="@font/pkmndp_peter_o_and_mr_gela"
    tools:context=".BatallaPokemon">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:rotationX="0"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/campo_batalla"
        android:contentDescription="@string/campo_de_batalla" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="420dp"
            android:background="#F0C0BACA"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/nombreMiPokemon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pkmndp_peter_o_and_mr_gela"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/charmander"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/vidaMiPokemon"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"

                android:progress="100" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:background="#F0C0BACA"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/nombreEnemigo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pkmndp_peter_o_and_mr_gela"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/charmander"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/vidaEnemigo"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:progress="100" />
        </LinearLayout>

        <ImageView
            android:id="@+id/pokemonRival"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_marginTop="172dp"
            android:src="@drawable/charmander"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.934"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/pokemon_rival" />

        <ImageView
            android:id="@+id/miPokemon"
            android:layout_width="200dp"
            android:layout_height="275dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="172dp"
            android:src="@drawable/charmander_shiny_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/mi_pokemon" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="220dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:background="#F0C0BACA"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <include
                        android:id="@+id/buttonAtaque1"
                        layout="@layout/boton_ataque"
                        android:layout_width="135dp"
                        android:layout_height="110dp" />

                    <include
                        android:id="@+id/buttonAtaque2"
                        layout="@layout/boton_ataque"
                        android:layout_width="135dp"
                        android:layout_height="110dp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <include
                        android:id="@+id/buttonAtaque3"
                        layout="@layout/boton_ataque"
                        android:layout_width="135dp"
                        android:layout_height="110dp" />

                    <include
                        android:id="@+id/buttonAtaque4"
                        layout="@layout/boton_ataque"
                        android:layout_width="135dp"
                        android:layout_height="110dp" />
                </TableRow>

            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/switchSpeed"
                    android:layout_width="130dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/pkmndp_peter_o_and_mr_gela"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/speed"
                    android:textColor="#24B6DA"
                    android:textSize="20sp"
                    android:theme="@style/SpeedSwitch"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <Switch
                    android:id="@+id/switchPower"
                    android:layout_width="130dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/pkmndp_peter_o_and_mr_gela"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/power"
                    android:textColor="#C13E15"
                    android:textSize="20sp"
                    android:theme="@style/PowerSwitch"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <Button
                    android:id="@+id/buttonRegistro"
                    android:layout_width="110dp"
                    android:layout_height="70dp"
                    android:fontFamily="@font/pkmndp_peter_o_and_mr_gela"
                    android:text="@string/registro"
                    android:textColor="#FFFFFF"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#000000"
            android:text="@string/reset"
            android:fontFamily="@font/pkmndp_peter_o_and_mr_gela"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>